microservices_manifests/manifests-policy/netpol-default-deny.yaml
# Description: Network policy to deny all incoming traffic to the sock-shop namespace
---
kind: Namespace
apiVersion: v1
metadata:
  name: sock-shop
  annotations:
    net.beta.kubernetes.io/network-policy: |
      {
        "ingress": {
          "isolation": "DefaultDeny"
        }
      }
