microservices_manifests/manifests-policy/netpol-cart-access.yaml
# Description: This is a network policy that allows traffic to the cart service from the front-end and orders services.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cart-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: cart
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: front-end
        - podSelector:
            matchLabels:
              name: orders
      ports:
        - protocol: TCP
          port: 80
