microservices_manifests/manifests-policy/netpol-cart-db-access.yaml
# Description: This is a network policy that allows the cart service to access the carts-db service on port 27017.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: carts-db-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: carts-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: cart
      ports:
        - protocol: TCP
          port: 27017
