microservices_manifests/manifests-policy/netpol-catalogue-access.yaml
# Description: This is a network policy that allows traffic from the front-end service to the catalogue service on port 80.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalogue-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: catalogue
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: front-end
      ports:
        - protocol: TCP
          port: 80
