microservices_manifests/manifests-policy/netpol-frontend-access.yaml
# Description: Network policy to allow access to front-end service
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-end-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: front-end
  ingress:
    - ports:
        - protocol: TCP
          port: 8079
