microservices_manifests/manifests-policy/netpol-user-access.yaml
# Description: Network policy to allow access to shipping service from front-end service
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: user
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: front-end
        - podSelector:
            matchLabels:
              name: orders
      ports:
        - protocol: TCP
          port: 80
